blocks/src/preheader-brand/style.scss
/**
 * The following styles get applied both on the front of your site
 * and in the editor.
 *
 * Replace them with your own styles or remove the file completely.
 */

.wp-block-uga-caes-caes-fac-preheader-brand {
    font-size: var(--wp--preset--font-size--tiny);
    display: flex;
    flex-direction: column;

    // a {
    //     font-weight: bold;
    //     text-decoration: none;
    // }

    .caes-fac-preheader-brand {
        padding: var(--wp--preset--spacing--30) clamp(1.2rem, 0.429rem + 2.286vw, var(--wp--preset--spacing--50));
        display: flex;
        align-items: center;
    }

    .caes-fac-preheader-uga {
        display: block;
        height: 8px;
        width: 148px;
        background-repeat: no-repeat;

        span {
            clip: rect(0 0 0 0);
            clip-path: inset(50%);
            height: 1px;
            overflow: hidden;
            position: absolute;
            white-space: nowrap;
            width: 1px;
        }
    }

    .caes-fac-preheader-left,
    .caes-fac-preheader-right {
        display: flex;
        align-items: center;

        p {
            padding: var(--wp--preset--spacing--30);
            margin: 0;
        }
    }

}

.has-contrast-background-color {
    .wp-block-uga-caes-caes-fac-preheader-brand {

        a {
            color: var(--wp--preset--color--base);
        }

        .caes-fac-preheader-uga {
            background-image: url('../../assets/images/GEORGIA-HW-W.svg');
        }

        .caes-fac-preheader-right {
            border-top: 1px solid rgba(255, 255, 255, 0.3);

            p {
                border-right: 1px solid rgba(255, 255, 255, 0.3);
                line-height: 1rem;
            }
        }

    }
}

.has-base-background-color {
    .wp-block-uga-caes-caes-fac-preheader-brand {

        a {
            color: var(--wp--preset--color--contrast);
        }

        .caes-fac-preheader-uga {
            background-image: url('../../assets/images/GEORGIA-HW-1CB.svg');
        }

        .caes-fac-preheader-right {
            border-top: 1px solid rgba(0, 0, 0, 0.2);

            p {
                border-right: 1px solid rgba(0, 0, 0, 0.2);
                line-height: 1rem;
            }
        }

    }
}

@media (min-width: 782px) {
    .wp-block-uga-caes-caes-fac-preheader-brand {
        flex-direction: row;
        justify-content: space-between;
        padding: 0 clamp(1.2rem, 0.429rem + 2.286vw, var(--wp--preset--spacing--50)) !important;
    }

    .has-base-background-color,
    .has-contrast-background-color {
        .wp-block-uga-caes-caes-fac-preheader-brand {
            .caes-fac-preheader-brand {
                padding: var(--wp--preset--spacing--30) 0;
            }

            .caes-fac-preheader-right {
                border-top: 0;
            }
        }
    }
}

// Preheader search

#preheaderSearchToggle {
    padding: var(--wp--preset--spacing--30);
    background-color: transparent;
    border: 0;
    font-family: var(--wp--preset--font-family--merriweather-sans);
    font-size: var(--wp--preset--font-size--tiny);
    cursor: pointer;
    display: flex;
    svg {
        height: 15px;
        width: 15px;
        margin-left: 3px;
    }
}

.caes-fac-preheader-right {
    position: relative;

    .search-container {
        position: absolute;
        right: 0;
        top: 100%;
        padding: var(--wp--preset--spacing--40);
        z-index: 1;
        visibility: visible;
        opacity: 1;
        transition: visibility 0s linear 0s, opacity 200ms;

        form {
            display: flex;
        }

        input {
            padding: 0.5rem;
            border: 0;
            font-size: var(--wp--preset--font-size--tiny);
            font-family: var(--wp--preset--font-family--merriweather-sans);

            &.search-field {
                border-bottom-right-radius: 0;
                border-top-right-radius: 0;
            }

            &[type="submit"] {
                color: var(--wp--preset--color--white);
                background-color: var(--wp--preset--color--primary);
                border-bottom-left-radius: 0;
                border-top-left-radius: 0;
            }
        }

        &[aria-hidden="true"] {
            opacity: 0;
            visibility: hidden;
            transition: visibility 0s linear 200ms, opacity 200ms;
        }
    }
}

.caes-fac-preheader.has-contrast-background-color {
    .search-container {
        background-color: var(--wp--preset--color--contrast);
        border-top: 1px solid rgba(255, 255, 255, 0.3);
    }

    #preheaderSearchToggle {
        color: var(--wp--preset--color--base);

        svg {
            fill: var(--wp--preset--color--base);
        }
    }
}

.caes-fac-preheader.has-base-background-color {
    .search-container {
        background-color: var(--wp--preset--color--base);
        border-top: 1px solid rgba(0, 0, 0, 0.2);

        input[type="search"] {
            border: 1px solid rgba(0, 0, 0, 0.2);
        }
    }

    #preheaderSearchToggle {
        color: var(--wp--preset--color--contrast);

        svg {
            fill: var(--wp--preset--color--contrast);
        }
    }
}

// Print

@media print {
    .wp-block-uga-caes-caes-fac-preheader-brand {
        display: none;
    }
}

